# Monex

./: .env.example  .gitignore  2026-05-05-005701-help-me-create-a-pretty-dashboard-using-some-cybe.txt  LICENSE  README.md  first_run.sh  main.py  pyproject.toml  requirements.txt  start.sh
accounts/: forms.py  models.py  urls.py  views.py
accounts/migrations/: 0001_initial.py
analytics/: urls.py  views.py
core/: context_processors.py  urls.py  utils.py  views.py
dashboard/: views.py
expensetracker/: asgi.py  settings.py  urls.py  wsgi.py
monextracker/: asgi.py  settings.py  urls.py  wsgi.py
recurring/: admin.py  forms.py  models.py  urls.py  views.py
recurring/migrations/: 0001_initial.py  0002_initial.py  0003_recurringtransaction_owner.py
scripts/: build_locales.py
settings_app/: apps.py  forms.py  urls.py  views.py
static/css/: components.css  layout.css  theme.css
static/js/: charts.js  hero3d.js
templates/: _placeholder.html  base.html  test_chart.html
templates/_partials/: hero3d.html  sidebar.html
templates/accounts/: _forgot_code.html  _forgot_done.html  _forgot_modal.html  _forgot_new_pw.html  _forgot_sent.html  _passcode_modal.html  first_run.html  first_run_success.html  login.html
templates/analytics/: _fragment.html  home.html
templates/core/: shell.html
templates/dashboard/: _fragment.html  home.html
templates/emails/: verification_code.html
templates/recurring/: _delete_modal.html  _form_modal.html  _fragment.html  list.html
transactions/: admin.py  forms.py  models.py  urls.py  views.py
(+48 files in other folders)
