[project]
name = "MonEX"
version = "0.1.0"
description = "personal expense tracker, deus ex flavored"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django>=5.1,<6.0",
    "dj-database-url>=2.2",
    "python-dotenv>=1.0",
    "whitenoise>=6.7",
    "weasyprint>=62",
    "gunicorn>=23.0",
]

[tool.setuptools]
packages = ["expensetracker"]
