[project]
name = "MonEX"
version = "0.1.0"
description = "Augmented Dashboard for personal finance tracking, heavily inspired in deus ex aesthetics"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django>=6.0,<7.0",
    "dj-database-url>=2.2",
    "python-dotenv>=1.0",
    "whitenoise>=6.7",
    "weasyprint>=62",
    "gunicorn>=23.0",
]

[tool.setuptools]
packages = ["expensetracker"]
